test/success/nostd/basics/effects/simple/main.sk
module Main {

pub effect Foo {
    fn doit(s: ())
}

fn handler_foo(s: ()) {

}

fn main() {
    with Foo.doit = handler_foo {
        Foo.doit(());
    }
}

}