test/errors/effects/self_handler/main.sk
module Main {

pub effect Foo {
    fn ping()
}

fn main() {
    with Foo.ping = Foo.ping {
        Foo.ping();
    }
}

}
